# platform/api/openapi/swagger.yaml
@@ -465,6 +465,11 @@ paths:
       consumes:
       - application/json
       parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Create policy
         in: body
         name: request
@@ -490,6 +495,11 @@ paths:
   /api/policies/{spaceId}:
     get:
       parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Space ID
         in: path
         name: spaceId
@@ -509,6 +519,12 @@ paths:
       - Policies
   /api/roles:
     get:
+      parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -527,6 +543,11 @@ paths:
       consumes:
       - application/json
       parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Create role
         in: body
         name: request
@@ -552,6 +573,11 @@ paths:
   /api/roles/{id}:
     delete:
       parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Role ID
         in: path
         name: id
@@ -569,6 +595,12 @@ paths:
       - Roles
   /api/spaces:
     get:
+      parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -587,6 +619,11 @@ paths:
       consumes:
       - application/json
       parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Create space
         in: body
         name: request
@@ -612,6 +649,11 @@ paths:
   /api/spaces/{id}:
     delete:
       parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Space ID
         in: path
         name: id
@@ -629,6 +671,12 @@ paths:
       - Spaces
   /api/users:
     get:
+      parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -647,6 +695,11 @@ paths:
       consumes:
       - application/json
       parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Create user
         in: body
         name: request
@@ -672,6 +725,11 @@ paths:
   /api/users/{id}:
     delete:
       parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: User ID
         in: path
         name: id
@@ -691,6 +749,11 @@ paths:
       consumes:
       - application/json
       parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: User ID
         in: path
         name: id
